@@ -2,6 +2,9 @@
 Version: 1.3.19
 Date: ????
 
+  Changes:
+    - Removed built-in Sea Block presets, in favor of Sea Block's own preset provided by their mod.
+
   Bugfixes:
     - Fixed crash when loading a preset with invalid aliases.
 
